syntax =  "proto3";

package com.improving.app.member.domain;

import "com/improving/app/common/domain/ids.proto";
import "com/improving/app/member/domain/memberDomainObjects.proto";
import "scalapb/scalapb.proto";
import "validate/validate.proto";

message MemberRegistered {
    common.domain.MemberId member_id = 1;
    EditableInfo member_info = 2;
    MemberMetaInfo meta = 3;
}

message MemberActivated {
    common.domain.MemberId member_id = 1;
    MemberMetaInfo meta = 2;
}

message MemberSuspended {
    common.domain.MemberId member_id = 1;
    MemberMetaInfo meta = 2;
    string suspension_reason = 3 [(validate.rules).string.min_len = 1];
}

message MemberTerminated {
    common.domain.MemberId member_id = 1;
    MemberMetaInfo last_meta = 2;
}

message MemberInfoEdited {
    common.domain.MemberId member_id = 1;
    EditableInfo member_info = 2;
    MemberMetaInfo meta = 3;
}


message MemberEvent{
  option (scalapb.message).sealed_oneof_extends = "com.improving.app.common.serialize.PBMsgOneOfSerializable";

  oneof sealed_value {
    MemberRegistered member_registered_value = 1;
    MemberActivated member_activated_value = 2;
    MemberSuspended member_suspended_value = 3;
    MemberTerminated member_terminated = 4;
    MemberInfoEdited member_info_edited = 5;
  }
}

//MemberResponse
message MemberData {
    common.domain.MemberId member_id = 1;
    MemberInfo member_info = 2;
    MemberMetaInfo member_meta_info = 3;
}

message MemberEventResponse {
    MemberEvent member_event = 1;
}

message MemberResponse {
    oneof sealed_value {
        MemberData member_state_value = 1;
        MemberEventResponse member_event_value = 2;
    }
}